<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="235.32dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_confirm_dialog"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/confirm_dialog_title"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_confirm_dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:paddingTop="13.33dp"
        android:text="@string/confirm_dialog_content"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40.66dp" >

        <Button
            android:id="@+id/btn_confirm_dialog_confirm"
            android:layout_width="82.66dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:background="@drawable/confirm_dialog_btn_selector"
            android:gravity="center"
            android:text="@string/confirm_dialog_confirm"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_confirm_dialog_cancel"
            android:layout_width="82.66dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="14dp"
            android:background="@drawable/confirm_dialog_btn_selector"
            android:gravity="center"
            android:text="@string/confirm_dialog_cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>