<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/ll_hairstyle_detail_btn_group"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_hairstyle_detail_prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_hairstyle_detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_hairstyle_detail_btn_group"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_hiar_style_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="800dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_hairstyle_detail_title" >

                <TextView
                    android:id="@+id/tv_hairstyle_detail_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/string_hairstyle_detail_title"
                    android:textIsSelectable="false"
                    android:textSize="31sp" />

                <TextView
                    android:id="@+id/tv_hairstyle_detail_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/string_hairstyle_detail_source"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/tv_hairstyle_detail_keyword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/string_hairstyle_detail_keyword"
                    android:textIsSelectable="false" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>